--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngx-translate/http-loader": "^16.0.0",
     "animate.css": "^4.1.1",
     "ladda": "^2.0.3",
+    "ngx-extended-pdf-viewer": "^25.6.0-alpha.3",
     "pdfjs-dist": "^5.4.296",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
